traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-use-regex-isolated.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-a-with-use-regex
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: regex.localhost
      http:
        paths:
          - path: /test(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-b-without-use-regex
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: no-regex.localhost
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
